# agentui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agentui/: __init__.py  cli.py  workflow_api.py
agentui/api/: server.py
agentui/core/: node.py  registry.py  workflow.py
agentui/nodes/: base_nodes.py  cv_nodes.py  model_nodes.py  pixelflow_nodes.py
agentui/static/: index.html
agentui/static/assets/: index-BdmYkHNg.css  index-CHc-FuQ6.js  index-CV7Axjqk.js  index-DJBuCFFW.js  index-Du8AXONQ.css
agentui/tools/: base_tools.py  cv_tools.py  model_tools.py  pixelflow_tools.py  transform_tools.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css  custom.css
ui/src/lib/: CategoryIcon.svelte  CustomNode.svelte  DrawerSidebar.svelte  ExploreModal.svelte  FlowDropZone.svelte  NodePalette.svelte  NodePalettePanel.svelte  PropertiesPanel.svelte  Toolbar.svelte  WorkflowPreview.svelte  stores.js  utils.js
