[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentui"
version = "0.1.0"
description = "Visual workflow builder for computer vision"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    {name = "Emrah NAZIF", email = "emrah@datamarkin.com"},
    {name = "Datamarkin", email = "support@datamarkin.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "tqdm>=4.64.0",
    "pillow>=9.0.0",
    "numpy>=1.21.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "pixelflow>=0.1.1",
]

[project.scripts]
agentui = "agentui.api.server:main"
agentui-cli = "agentui.cli:main"

[tool.setuptools.packages.find]
include = ["agentui*"]
exclude = ["ui*"]

[tool.setuptools.package-data]
agentui = ["static/**/*"]